--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -292,10 +292,10 @@ ul#nav li.current a { color: #fe6928; }
 }
 .bars li {
    position: relative;
-  	margin-bottom: 60px;
+  	/* margin-bottom: 60px;
   	background: #333;
   	height: 42px;
-  	border-radius: 0px;
+  	border-radius: 0px; */
 }
 .bars li em {
 	font: 15px 'opensans-bold', sans-serif;
