--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -859,7 +859,7 @@ call-to-action .button {
 	color: #fff;
 	background-color: #0762f9;
 }
-#contact button.submit {
+#contact input.submit {
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	color:#fff;
@@ -1021,4 +1021,8 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 .github-btn{
    background-color: #34495e !important;
+}
+
+#sendMessage {
+   background-color: #373233;
 }
