--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -871,7 +871,7 @@ call-to-action .button {
 	border-radius: 0px;
    margin-left: 26%;
 }
-#contact button.submit:hover {
+#contact input.submit:hover {
 	color: #0D0D0D;
 	background: #fff;
 }
